objects/ddcAssess__Field_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>ddcAssess__Blank__c</fullName>
        <label>Blank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Blank_pcnt__c</fullName>
        <formula>IF(ddcAssess__Entity_Assessment__r.ddcAssess__Matched__c &gt; 0, ddcAssess__Blank__c / ddcAssess__Entity_Assessment__r.ddcAssess__Matched__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blank %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Different__c</fullName>
        <label>Different</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Different_pcnt__c</fullName>
        <formula>IF(ddcAssess__Entity_Assessment__r.ddcAssess__Matched__c &gt; 0, ddcAssess__Different__c /  ddcAssess__Entity_Assessment__r.ddcAssess__Matched__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Different %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Entity_Assessment__c</fullName>
        <label>Entity Assessment</label>
        <referenceTo>ddcAssess__Entity_Assessment__c</referenceTo>
        <relationshipLabel>Field Assessments</relationshipLabel>
        <relationshipName>Field_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Unmatched_Blank__c</fullName>
        <label>Unmatched Blank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Unmatched_Blank_pcnt__c</fullName>
        <formula>IF(ddcAssess__Entity_Assessment__r.ddcAssess__Unmatched__c &gt; 0, ddcAssess__Unmatched_Blank__c /  ddcAssess__Entity_Assessment__r.ddcAssess__Unmatched__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unmatched Blank %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Field Assessment</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>